package com.proys.gestion_tareas.entity;

public enum EstadoProyecto {
    PLANIFICADO,
    EN_PROGRESO,
    COMPLETADO,
    PAUSADO
}
