package com.proys.gestion_tareas.entity;

public enum EstadoTarea {
    PENDIENTE,
    EN_PROGRESO,
    COMPLETADA,
    BLOQUEADA
}
