package com.proys.gestion_tareas.entity;

public enum Prioridad {
    BAJA,
    MEDIA,
    ALTA
}
